Fixed downloads actors on small screens

--- a/src/app/pages/downloads/downloads.component.css
+++ b/src/app/pages/downloads/downloads.component.css
@@ -59,4 +59,5 @@
     font-size: 1.5em;
     margin-bottom: 1em;
     font-weight: bold;
+    overflow: hidden;
 }
